--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(malloc_tutorial C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(malloc_tutorial main.c)
+add_executable(malloc_tutorial main.c my_malloc.c my_malloc.h)
